fix double scrollbar

--- a/frontend/src/styles/messages.scss
+++ b/frontend/src/styles/messages.scss
@@ -19,14 +19,6 @@
   hyphens: auto;
 }
 
-.message-list-wrapper {
-  flex: 1 1 auto;
-  max-height: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
 .message-list {
   flex: 1 1 auto;
   overflow-y: auto;
